--- a/css/style.css
+++ b/css/style.css
@@ -68,20 +68,28 @@ body{
   padding: 0;
   width: 100%;
   box-sizing: border-box;
-  margin-left: 73px;
-  margin-right: 73px;
 }
 .header .item-menu {
   display: inline-block;
   vertical-align: baseline;
   text-align: left;
   width:25%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 16px;
+  padding-left: 71px;
+  box-sizing: border-box;
+}
+.header .item-menu:nth-child(2) {
+  padding-left: 12px;
 }
 .header .item-menu:nth-child(3),
 .header .item-menu:nth-child(4) {
   text-align: right;
+  padding-left: 0px;
+  padding-right: 17px;
+}
+.header .item-menu:nth-child(4) {
+  padding-right: 71px;
 }
 .header .link-item-menu {
   text-decoration: none;
@@ -607,11 +615,11 @@ body{
       -ms-flex-align: center;
           align-items: center;
   width: 1200px;
-  height: 128px;
+  height: 122px;
   position: absolute;
   z-index: 3;
   left: 0;
-  top: -128px;
+  top: -122px;
 
   background-color: rgba(255,255,255,0.9);
 }
