--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body{
   margin: 0;
   padding: 0;
@@ -27,7 +28,8 @@ body{
 .wrapper {
   width: 1200px;
   margin: 0 auto;
-  box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.3);
+          box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.3);
 }
 .row {
   display: -webkit-box;
@@ -60,14 +62,16 @@ body{
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-between;
+      -webkit-box-pack: justify;
+          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
   width: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .header .item-menu {
   display: inline-block;
@@ -77,7 +81,8 @@ body{
   padding-top: 15px;
   padding-bottom: 16px;
   padding-left: 71px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .header .item-menu:nth-child(2) {
   padding-left: 12px;
@@ -114,7 +119,9 @@ body{
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 .logo-poster {
   display: -webkit-box;
@@ -195,7 +202,9 @@ body{
   position: absolute;
   top: 60px;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 79px;
   height: 77px;
 
@@ -291,7 +300,7 @@ body{
  .img-advantage-second {
   width: calc(100%/3*2);
 
-  background-image: url("../img/Layer3.jpg");
+  background-image: url("../img/layer3.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -299,7 +308,7 @@ body{
 }
 .img-advantage-first {
   background-color: #6d99c0;
-  background-image: url("../img/Layer2.jpg");
+  background-image: url("../img/layer2.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -377,8 +386,10 @@ body{
   line-height: 24px;
 }
 .search .search-btn {
+  position: relative;
+  z-index: 4;
   border: 0;
-  padding: 31px 139px;
+  padding: 31px 142px;
 
   font-size: 21px;
   line-height: 26px;
@@ -401,42 +412,64 @@ body{
   outline: none;
 }
 .search-popup {
-  display: none;
+  display: block;
   width: 568px;
   height: 395px;
   position: absolute;
   top: 291px;
+  left: 316px;
   z-index: 3;
   background-color: #fff;
   -webkit-box-shadow: 0px 7px 62px 7px rgba(0,0,0,0.15);
           box-shadow: 0px 7px 62px 7px rgba(0,0,0,0.15);
 }
 .search .search-popup-show {
-  display: block;
-  animation-name: emergence;
-  animation-duration: 1s;
+  display: none;
+  -webkit-animation-name: emergence;
+          animation-name: emergence;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+@-webkit-keyframes emergence {
+  0% {-webkit-transform: translateX(-2000px);transform: translateX(-2000px); }
+  20% {-webkit-transform: translateX(-200px);transform: translateX(-200px); }
+  40% {-webkit-transform: translateX(-100px);transform: translateX(-100px); }
+  60% {-webkit-transform: translateX(-50px);transform: translateX(-50px); }
+  80% {-webkit-transform: translateX(-20px);transform: translateX(-20px); }
+  100% {-webkit-transform: translateX(0px);transform: translateX(0px); }
 }
 @keyframes emergence {
-  0% {transform: translateX(-2000px); }
-  20% {transform: translateX(-200px); }
-  40% {transform: translateX(-100px); }
-  60% {transform: translateX(-50px); }
-  80% {transform: translateX(-20px); }
-  100% {transform: translateX(0px); }
+  0% {-webkit-transform: translateX(-2000px);transform: translateX(-2000px); }
+  20% {-webkit-transform: translateX(-200px);transform: translateX(-200px); }
+  40% {-webkit-transform: translateX(-100px);transform: translateX(-100px); }
+  60% {-webkit-transform: translateX(-50px);transform: translateX(-50px); }
+  80% {-webkit-transform: translateX(-20px);transform: translateX(-20px); }
+  100% {-webkit-transform: translateX(0px);transform: translateX(0px); }
 }
 .search .search-popup-error {
-  animation-name: error;
-  animation-duration: 2s;
+  -webkit-animation-name: error;
+          animation-name: error;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+}
+@-webkit-keyframes error {
+  0% {-webkit-transform: translateX(-20px);transform: translateX(-20px); }
+  20% {-webkit-transform: translateX(20px);transform: translateX(20px); }
+  40% {-webkit-transform: translateX(-10px);transform: translateX(-10px); }
+  60% {-webkit-transform: translateX(10px);transform: translateX(10px); }
+  80% {-webkit-transform: translateX(-5px);transform: translateX(-5px); }
+  100% {-webkit-transform: translateX(5px);transform: translateX(5px); }
 }
 @keyframes error {
-  0% {transform: translateX(-20px); }
-  20% {transform: translateX(20px); }
-  40% {transform: translateX(-10px); }
-  60% {transform: translateX(10px); }
-  80% {transform: translateX(-5px); }
-  100% {transform: translateX(5px); }
+  0% {-webkit-transform: translateX(-20px);transform: translateX(-20px); }
+  20% {-webkit-transform: translateX(20px);transform: translateX(20px); }
+  40% {-webkit-transform: translateX(-10px);transform: translateX(-10px); }
+  60% {-webkit-transform: translateX(10px);transform: translateX(10px); }
+  80% {-webkit-transform: translateX(-5px);transform: translateX(-5px); }
+  100% {-webkit-transform: translateX(5px);transform: translateX(5px); }
 }
 .search-form {
+  width: 100%;
   padding: 54px 55px;
 }
 .arrival,
@@ -450,8 +483,8 @@ body{
   margin-bottom: 27px;
 }
 .search-form input[type="text"] {
-  padding: 9px;
-  width: 345px;
+  padding: 7px;
+  width: 342px;
   margin-left: 21px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -463,17 +496,28 @@ body{
   font-weight: bold;
 
   background-color: #f2f2f2;
-  border: 0px solid transparent;
+  border: 2px solid transparent;
+}
+.search-form input[type="text"]:hover {
+  outline: none;
+  cursor: pointer;
+  background-color: #ebebeb;
+}
+.search-form input[type="text"]:focus {
+  background-color: #fff;
+  border: 2px solid #f2f2f2;
 }
 .departure input[type="text"] {
   margin-left: 16px;
 }
-.arrival svg,
-.departure svg  {
+.calendar {
+  border: none;
+  background-color: transparent;
   position: absolute;
   z-index: 3;
   top: 8px;
-  right: 11px;
+  right: 113px;
+  cursor: pointer;
 }
 .arrival path,
 .departure path {
@@ -483,20 +527,17 @@ body{
 .departure rect {
   fill: #cccccc;
 }
-.arrival svg:hover .arrival path,
-.arrival svg:hover .arrival rect,
-.arrival svg:focus .arrival path,
-.arrival svg:focus .arrival rect,
-.departure svg:hover .departure path,
-.departure svg:hover .departure rect,
-.departure svg:focus .departure path,
-.departure svg:focus .departure rect {
+.calendar:focus {
+  outline: none;
+}
+.calendar:hover path,
+.calendar:hover rect,
+.calendar:focus path,
+.calendar:focus rect {
   fill: #000;
 }
-.arrival svg:active .arrival rect,
-.arrival svg:active .arrival path,
-.departure svg:active .departure path,
-.departure svg:active .departure rect {
+.calendar:active path,
+.calendar:active rect {
  fill: #81b3d2;
 }
 .adult,
@@ -531,7 +572,7 @@ body{
  .child input[type="number"] {
   margin-left: 24px;
  }
-.minus {
+.btn-minus {
   display: block;
   position: absolute;
   top: 19px;
@@ -540,39 +581,64 @@ body{
   height: 3px;
 
   background-color: #a9a9a9;
+  border: none;
+  cursor: pointer;
 }
-.child .minus {
+.child .btn-minus {
   top: 19px;
   left: 80px;
-
+}
+.btn-minus:focus,
+.btn-plus:focus .plus-vertical,
+.btn-plus:focus .plus-horizontal {
+  background-color: #000;
+  outline: none;
+}
+.btn-plus:focus {
+  outline: none;
+}
+.btn-minus:hover,
+.btn-plus:hover .plus-vertical,
+.btn-plus:hover .plus-horizontal {
+  background-color: #000;
+}
+.btn-minus:active,
+.btn-plus:active .plus-vertical,
+.btn-plus:active .plus-horizontal {
+  background-color: #81b3d2;
+}
+.btn-plus {
+  position: absolute;
+  top: 11px;
+  left: 193px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.child .btn-plus {
+  position: absolute;
+  top: 11px;
+  left: 148px;
 }
 .plus-vertical {
   display: block;
-  position: absolute;
-  top: 19px;
-  left: 200px;
+  position: relative;
+  top: 6px;
+  left: 0px;
   width: 11px;
   height: 3px;
 
   background-color: #a9a9a9;
 }
-.child .plus-vertical {
-  top: 21px;
-  left: 155px;
-}
 .plus-horizontal {
   display: block;
-  position: absolute;
-  top: 15px;
-  left: 203px;
+  position: relative;
+  top: -1px;
+  left: 4px;
   width: 3px;
   height: 11px;
 
   background-color: #a9a9a9;
-}
-.child .plus-horizontal {
-  top: 17px;
-  left: 159px;
 }
 .search-popup-btn {
   margin-top: 55px;
@@ -587,6 +653,13 @@ body{
 
   background-color: #81b3d2;
   border: 0px solid transparent;
+}
+.search-popup-btn:hover {
+  background-color: #669ec0;
+}
+.search-popup-btn:active {
+  background-color: #5496bd;
+  color: #88b6d1;
 }
 .map {
   height: 594px;
@@ -752,6 +825,7 @@ body{
   width: 488px;
   margin: 0;
   padding-left: 19px;
+  border: 0px solid transparent;
 }
 .filter .infrastructure{
   width: 241px;
@@ -759,7 +833,7 @@ body{
 }
 .filter .infrastructure-name,
 .filter .type-of-housing-name {
-  margin-bottom: 25px;
+  margin-bottom: 18px;
 
   color: #fff;
   text-transform: uppercase;
@@ -814,7 +888,7 @@ body{
           transform: rotate(-45deg);
 }
 .cost {
-  width: 328px;
+  width: 341px;
   padding-left: 14px;
   margin-top: -2px;
 }
